# MapGameServer

./: .gitignore  CMakeLists.txt  README.md  todos.txt
3rd/asio-1.18.0/include/asio/ip/: udp.hpp
3rd/asio-1.18.0/src/examples/cpp03/tutorial/daytime4/: client.cpp
3rd/taskflow-master/: CMakeLists.txt
3rd/taskflow-master/examples/: observer.cpp
include/: Api.hpp  MapServer.hpp  Serializer.hpp
include/Models/: Command.hpp  CommandArgs.hpp  Pool.hpp  SpawnedEntity.hpp
src/: CMakeLists.txt  MapServer.cpp  main.cpp
src/Client/src/: MapClient.hpp  MapServer.cpp
src/MAP/: Api.hpp  MapServer.cpp  MapServer.hpp
src/MAP/Models/: Client.hpp  Command.hpp  CommandArgs.hpp  Pool.hpp
src/MAP/Serialization/: BinaryObject.cpp  BinaryObject.hpp  BinaryUtils.cpp  Serializer.hpp  SerializerAPI.hpp  Tests.hpp  TypesManager.hpp
src/MAP/Serialization/Types/: Array.cpp  Array.hpp  Byte.cpp  Byte.hpp  Command.cpp  Command.hpp  Float.cpp  Float.hpp  Integer.cpp  Integer.hpp  MemoryTag.cpp  MemoryTag.hpp  String.cpp  String.hpp
src/MAP/Tests/: SerializerTest.hpp
src/MAP_Client/src/: Api.hpp  MapClient.hpp  MapServer.cpp  UnitTesting.hpp
src/MAP_Serializer/: CMakeLists.txt
src/MAP_Serializer/src/SerializerLib/DesignTimeBuild/: .dtbcache.v2
src/MAP_Serializer/src/SerializerLib/v17/: .futdcache.v1
src/MAP_Serializer/src/Tests/: SerializerTest.hpp
src/MAP_Serializer/src/Types/: Byte.hpp  StaticArray.cpp  StaticArray.hpp  String.cpp  String.hpp
src/MAP_Server/: CMakeLists.txt
src/MAP_Server/src/Models/: Client.hpp  Command.hpp
src/MAP_Unity/SerializerLib/SerializerLib/: SerializerLib.csproj
src/MAP_Unity/SerializerLib/SerializerLib/Properties/: launchSettings.json
src/MAP_Unity/SerializerLib/SerializerLib/Serialization/: GlobalMembers.cs  SerializerAPI.cs
src/MAP_Unity/SerializerLib/SerializerLib/Serialization/Types/: NetFloat.cs  NetStaticArray.cs
src/Serializer/: CMakeLists.txt  README.md
src/Serializer/csharp/: App.cs  SerializerLib.sln
src/Serializer/csharp/Serialization/: BinaryUtils.cs
src/Serializer/csharp/Serialization/Types/: NetInt.cs  NetString.cs
src/Serializer/src/: BinaryUtils.hpp  SerializerAPI.hpp  TypesManager.hpp
src/Serializer/src/Tests/: CMakeLists.txt
src/Serializer/src/Tests/suites/: helloWorldGtest.hpp
src/Serializer/src/Types/: Array.cpp  Array.hpp  Float.cpp  Float.hpp  Integer.hpp
src/SerializerLib/SerializerLib/: App.cs  SerializerLib.csproj
src/SerializerLib/SerializerLib/Serialization/: BinaryUtils.cs  GlobalMembers.cs  SerializerAPI.cs  TypesManager.cs
src/SerializerLib/SerializerLib/Serialization/Types/: MemoryTag.cs  NetArray.cs  NetByte.cs  NetCommand.cs  NetFloat.cs  NetInt.cs  NetStaticArray.cs  NetString.cs  String.cs
src/SerializerLib/SerializerLib/Tests/: SerializerTest.cs
src/Server/: CMakeLists.txt  README.md
src/Server/include/: CommandsManager.hpp  FormatManager.hpp  IMapCommand.hpp  IMapDataFormat.hpp  IMapNetPayload.hpp  IMapObject.hpp  IMapServer.hpp  IMapTransport.hpp  MapApi.hpp  MapServer.hpp  TransportManager.hpp
src/Server/include/Models/: Client.hpp  Command.hpp  CommandArgs.hpp  Pool.hpp  SpawnedEntity.hpp
src/Server/src/: MapServer.cpp  MapServer.hpp
src/Server/src/Commands/: ActivePools.hpp  Spawn.hpp  Subscribe.hpp  Unsubscribe.hpp  Upsert.hpp
src/Server/src/Models/: Client.hpp  Command.hpp  CommandArgs.hpp  Pool.hpp  SpawnedEntity.hpp
src/Server/src/Serialization/: BinaryFormat.hpp  FormatManager.hpp  JsonFormat.hpp  MapFormat.hpp
src/Server/src/Serialization/Objects/: BinaryObject.hpp  JsonObject.hpp
src/Server/src/Transport/: AsioSocket.hpp  MapSocket.hpp  PayLoadFormat.hpp
src/Server/src/Transport/Models/: AsioClientData.hpp
src/Server/src/Utils/: StopWatch.hpp
src/Tests/: CMakeLists.txt
src/Tests/Serializer/: SerializerTest.cpp
src/Tests/Server/: FormatsTest.cpp
src/examples/cpp/: server.cpp
src/examples/cpp/client_example/: client_example.cpp
src/examples/cpp/server_example/: server.cpp
